manifests/05-glpi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glpi
  namespace: glpi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi
  template:
    metadata:
      labels:
        app: glpi
    spec:
      containers:
        - name: glpi
          image: diouxx/glpi:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: glpi
  namespace: glpi
spec:
  selector:
    app: glpi
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
